2008-01-29 Harri Pitkänen <hatapitk@iki.fi>

	* Increase cost limit for suggestions from 250 to 350.

2008-01-19 Harri Pitkänen <hatapitk@iki.fi>

	* Iconv on OS X should use UCS-4-INTERNAL too.

2007-12-30 Harri Pitkänen <hatapitk@iki.fi>

	* Some fixes for VOIKKO_OPT_ACCEPT_EXTRA_HYPHENS.
	* Add option VOIKKO_OPT_ACCEPT_MISSING_HYPHENS.

2007-12-29 Harri Pitkänen <hatapitk@iki.fi>

	* Add option VOIKKO_OPT_ACCEPT_EXTRA_HYPHENS.

2007-12-01 Harri Pitkänen <hatapitk@iki.fi>

	* Tokenization functions should not be used without initializing the
	  library.

2007-11-28 Harri Pitkänen <hatapitk@iki.fi>

	* Fix configure test AM_ICONV failing with -Wall on FreeBSD.
	* Tweak URL recognition so that "J.K.Paasikivi" will not be
	  considered as hostname.

2007-11-27 Harri Pitkänen <hatapitk@iki.fi>

	* Add boolean option VOIKKO_OPT_IGNORE_NONWORDS.
	* Do not link voikkospell and voikkohyphenate against libmalaga.

2007-10-30 Harri Pitkänen <hatapitk@iki.fi>

	* Additional work on string tokenizer.

2007-10-28 Harri Pitkänen <hatapitk@iki.fi>

	* Additional work on string tokenizer.

2007-10-27 Harri Pitkänen <hatapitk@iki.fi>

	* Additional work on string tokenizer.

2007-10-21 Harri Pitkänen <hatapitk@iki.fi>

	* Allow the use of environment variable VOIKKO_DICTIONARY_PATH
	  to specify the dictionary path.

2007-10-15 Harri Pitkänen <hatapitk@iki.fi>

	* Add preliminary version of string tokenizer
	  voikko_next_token_ucs4.
	* Increase version numbers for 1.6.

2007-09-08 Harri Pitkänen <hatapitk@iki.fi>

	* Add replacement suggestion "." -> ","

2007-08-23 Harri Pitkänen <hatapitk@iki.fi>

	* Change configure.ac to fix build on FreeBSD

2007-08-20 Harri Pitkänen <hatapitk@iki.fi>

	* FreeBSD fix, thanks to Jaakko Heinonen

2007-07-08 Harri Pitkänen <hatapitk@iki.fi>

	* Add option ignore_numbers=n to voikkospell. Change
	  default from 1 to 0 (the library default).
	* Undo 1-to-1 normalisations in spelling suggestions.

2007-06-19 Harri Pitkänen <hatapitk@iki.fi>
