@@ -1,3 +1,7 @@
+2008-03-07 Harri Pitkänen <hatapitk@iki.fi>
+
+	* Fix hyphenation of nougat'kaan.
+
 2008-01-29 Harri Pitkänen <hatapitk@iki.fi>
 
 	* Increase cost limit for suggestions from 250 to 350.
